[package]
name = 'pallet-matchmaker'
version = '4.0.0-dev'
description = 'Ajuna Network pallet matchmaker for creating matches between players.'
authors = ['Ajuna Network <https://github.com/ajuna-network>']
edition = '2018'
homepage = 'https://ajuna.io'
license = 'Apache-2.0'
repository = 'https://github.com/ajuna-network/pallets-ajuna/tree/master/pallet-ajuna-matchmaker'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
codec = {default-features = false, features = ['derive','max-encoded-len'], package = 'parity-scale-codec', version = '2.2.0'}
scale-info = {default-features = false, features = ['derive'], version = '1.0'}

# primitives
sp-std = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}

# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
frame-support = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
frame-system = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}

[dev-dependencies]
serde = '1.0.126'
sp-runtime = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-core = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-io = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'sp-std/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
