[package]
name = 'pallet-matchmaker'
version = '4.0.0-dev'
description = 'Ajuna Network pallet matchmaker for creating matches between players.'
authors = ['Ajuna Network <https://github.com/ajuna-network>']
edition = '2018'
homepage = 'https://ajuna.io'
license = 'Apache-2.0'
repository = 'https://github.com/ajuna-network/pallets-ajuna/tree/master/pallet-ajuna-matchmaker'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
codec = {default-features = false, features = ['derive','max-encoded-len'], package = 'parity-scale-codec', version = '2.2.0'}
scale-info = {default-features = false, features = ['derive'], version = '1.0'}

# primitives
sp-std = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '55cd07a7e22c26932f7bd16b87ea5a7569e38eb4'}

# Substrate dependencies
frame-benchmarking = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '55cd07a7e22c26932f7bd16b87ea5a7569e38eb4', optional = true}
frame-support = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '55cd07a7e22c26932f7bd16b87ea5a7569e38eb4'}
frame-system = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '55cd07a7e22c26932f7bd16b87ea5a7569e38eb4'}

[dev-dependencies]
serde = '1.0.126'
sp-runtime = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '55cd07a7e22c26932f7bd16b87ea5a7569e38eb4'}
sp-core = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '55cd07a7e22c26932f7bd16b87ea5a7569e38eb4'}
sp-io = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '55cd07a7e22c26932f7bd16b87ea5a7569e38eb4'}

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'sp-std/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
